Fixed signup spacing

--- a/src/App.css
+++ b/src/App.css
@@ -553,6 +553,7 @@ Login / Signup
 	}
 	.signup {
 		padding-top: 4rem;
+		padding-bottom: 2rem;
 	}
 }
 
